[BFN] https://test.kuali.org/jira/browse/KRAFUNC-124,  https://test.kuali.org/jira/browse/KRAFUNC-124,  https://test.kuali.org/jira/browse/KRAFUNC-58, https://test.kuali.org/jira/browse/KRAFUNC-211, and https://test.kuali.org/jira/browse/KRAFUNC-214 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6682 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-time-money.html
+++ b/kra-awa-dev/aw-time-money.html
@@ -4728,7 +4728,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Transactions (000121-005)</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Transactions (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A02" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F02" ></a></td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -5054,7 +5054,7 @@
 	<!-- Panel Tab Header --> 
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Direct/F&amp;A Funds Distribution (000121-005)</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Direct/F&amp;A Funds Distribution (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A301" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F301" vspace=6></a></td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -5196,7 +5196,7 @@
 	<!-- Panel Tab Header -->  
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary (000121-005)</td>
+                <td class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" >Summary (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A22" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F22" ></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -5348,7 +5348,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Action Summary (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Action Summary (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A03" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F03" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -5458,7 +5458,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">History (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">History (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A025" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F025" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -6741,7 +6741,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ad Hoc Recipients (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Ad Hoc Recipients (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A10" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F10" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
@@ -6914,7 +6914,7 @@
 	<!-- Panel Tab Header -->
         <table width="100%" cellpAdding="0"  cellspacing="0" class="tab" summary="">
             <tr>
-                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Route Log (000121-005)</td>
+                <td height="30" class="tabtable1-left-colspan"><img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle">Route Log (000121-005 : 426320)</td>
                 <td class="tabtable2-mid"><a href="#" id="A11" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F11" vspace=6></a> </td>
                 <td class="tabtable2-right"><img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle"></td>
             </tr>
