https://test.kuali.org/jira/browse/KRAFUNC-18
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6683 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -169,7 +169,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               </span><span class="subhead-right"> <a href="#"> <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')"></a></span> </div>
             <table cellpAdding=0 cellspacing="0"  summary="">
               <tr>
-                <th scope="row">Award Sequence #</th>
+                <th scope="row">Award Version</th>
                 <th>Principal Investigator</th>
                 <th>Lead Unit</th>
                 <th>Proposed Sponsor</th>
