[BFN] https://test.kuali.org/jira/browse/KRAFUNC-255 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6691 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn/coi-disclosureactions.html
+++ b/kra-coi-bfn/coi-disclosureactions.html
@@ -337,7 +337,67 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             </tbody>
         </table>
     </div>
-          
+
+<!-- Disclosure Form History -->
+    <table width="100%" cellpadding="0"  cellspacing="0" class="tab" summary="">
+        <tr>
+            <td class="tabtable1-left">
+                <img src="../images/tab-topleft1.gif" alt="" width="12" height="29" align="absmiddle" />Disclosure Actions History
+            </td>
+            <td class="tabtable2-mid">
+                <a href="#" id="A030" onclick="rend(this, false)"><img src="../images/tinybutton-show.gif" alt="show/hide this panel" width=45 height=15 border=0 id="F030" ></a>
+            </td>
+            <td class="tabtable2-right">
+                <img src="../images/tab-topright1.gif" alt="" width="12" height="29" align="absmiddle">
+            </td>
+        </tr>
+    </table>
+    <div class="tab-container" align="center" id="G030" style="display: none;">
+        <div class="h2-container">
+            <span class="subhead-left">
+                <h2>Disclosure Actions History</h2>
+            </span>
+            <span class="subhead-right">
+                <span class="subhead">
+                    <a href="#">
+                        <img src="../images/my_cp_inf.gif" alt="help" width="15" height="14" border="0" align="absmiddle" onClick="MM_openBrWindow('../kra-coeus-irb/help-pop.html','','scrollbars=yes,resizable=yes,width=500,height=500')">
+                    </a>
+                </span>
+            </span>
+        </div>
+        <table cellpadding=0 cellspacing="0" class="result-table" summary="">
+            <tbody id="G5">
+                <tr>
+                    <th width="5%">&nbsp;</th>
+                    <th width="31%">Disclosure Category</th>
+                    <th width="27%">Date Submitted </th>
+                    <th width="24%">Description </th>
+                    <th width="13%">Actions</th>
+                </tr>
+                <tr>
+                    <th scope="row"><div align="center">3</div></th>
+                    <td>General Questions</td>
+                    <td nowrap><div align="center"><span>12/14/06 </span></div></td>
+                    <td nowrap><div align="center">asdf</div></td>
+                    <td nowrap><div align="center"><img src="../images/tinybutton-view.gif" width="40" height="15"></div></td>
+                </tr>
+                <tr>
+                    <th scope="row"><div align="center"><span class="copybold">2</span></div></th>
+                    <td>General Questions </td>
+                    <td nowrap><div align="center"><span> 11/14/06 </span></div></td>
+                    <td nowrap><div align="center"> asdf&nbsp; </div></td>
+                    <td nowrap><div align="center"><img src="../images/tinybutton-view.gif" width="40" height="15"></div></td>
+                </tr>
+                <tr>
+                    <th  scope="row"><div align="center">1</div></th>
+                    <td>General Questions </td>
+                    <td nowrap><div align="center"><span> 02/14/06 </span></div></td>
+                    <td nowrap><div align="center"> asdf </div></td>
+                    <td nowrap><div align="center"><img src="../images/tinybutton-view.gif" width="40" height="15"></div></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>          
 
           
           <table width="100%" border="0" cellpadding="0" cellspacing="0" class="b3" summary="">
