--- a/kra-com-dev/irb-meeting.html
+++ b/kra-com-dev/irb-meeting.html
@@ -508,7 +508,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                 <tr>
                     <th style="width:50px;">&nbsp;</th>
                     <th>Name</th>
-                    <th style="width:250px;">Role</th>
+                    <th style="width:250px;">Alternate For:</th>
                     <th style="width:135px;">Action</th>
                 </tr>
             	<tr>
@@ -522,7 +522,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Adams, Douglas
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td style="width:261px;">Member</td>
+                                    <td style="width:261px;">&nbsp;</td>
                                     <td style="text-align:center; width:111px;">
                                         <input src="../images/tinybutton-markabsent.gif" onclick="javascript: alert('This would move this person to the Absent sub-panel.'); return false" class="tinybutton" alt="absent" title="Mark Absent" type="image" />
                                     </td>
@@ -533,7 +533,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Andersen, Hans Christian
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td>Member</td>
+                                    <td>&nbsp;</td>
                                     <td style="text-align:center; width:111px;">
                                         <input src="../images/tinybutton-markabsent.gif" onclick="javascript: alert('This would move this person to the Absent sub-panel.'); return false" class="tinybutton" alt="absent" title="Mark Absent" type="image" />
                                     </td>
@@ -544,7 +544,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Asimov, Isaac
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td>Member</td>
+                                    <td>&nbsp;</td>
                                     <td style="text-align:center; width:111px;">
                                         <input src="../images/tinybutton-markabsent.gif" onclick="javascript: alert('This would move this person to the Absent sub-panel.'); return false" class="tinybutton" alt="absent" title="Mark Absent" type="image" />
                                     </td>
@@ -555,7 +555,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         DeStefano, Michelle
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td>Member</td>
+                                    <td>&nbsp;</td>
                                     <td style="text-align:center; width:111px;">
                                         <input src="../images/tinybutton-markabsent.gif" onclick="javascript: alert('This would move this person to the Absent sub-panel.'); return false" class="tinybutton" alt="absent" title="Mark Absent" type="image" />
                                     </td>
@@ -566,7 +566,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Hutchinson, Bryan
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td>Member</td>
+                                    <td>&nbsp;</td>
                                     <td style="text-align:center;">
                                         <input src="../images/tinybutton-markabsent.gif" onclick="javascript: alert('This would move this person to the Absent sub-panel.'); return false" class="tinybutton" alt="absent" title="Mark Absent" type="image" />
                                     </td>
@@ -665,12 +665,11 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <!-- Members Absent or Available -->
             <table cellpadding=0 cellspacing="0"  summary="">
                 <tr>
-                    <td colspan="4" class="tab-subhead1">Members Absent or Available: 5</td>
+                    <td colspan="3" class="tab-subhead1">Members Absent or Available: 5</td>
                 </tr>
                 <tr>
                     <th style="width:50px;">&nbsp;</th>
                     <th>Name</th>
-                    <th style="width:250px;">Role</th>
                     <th style="width:204px;">Action</th>
                 </tr>
                 <tr>
@@ -684,7 +683,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Dwyer, Dan
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td style="width:261px;">Member</td>
                                     <td style="text-align:center; width:180px;">
                                         <input src="../images/tinybutton-presentvoting.gif" onclick="javascript: alert('This would move this person to the Voting Members Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
                                         <input src="../images/tinybutton-presentother.gif" onclick="javascript: alert('This would move this person to the Others Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
@@ -696,7 +694,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Smith, Carolyn
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td>Member</td>
                                     <td style="text-align:center;">
                                         <input src="../images/tinybutton-presentvoting.gif" onclick="javascript: alert('This would move this person to the Voting Members Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
                                         <input src="../images/tinybutton-presentother.gif" onclick="javascript: alert('This would move this person to the Others Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
@@ -707,9 +704,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                     <td>
                                         Stinson, Ray
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
-                                    </td>
-                                    <td>
-                                        Alternate
                                     </td>
                                     <td style="text-align:center;">
                                         <input src="../images/tinybutton-presentvoting.gif" onclick="javascript: alert('This would move this person to the Voting Members Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
@@ -722,9 +716,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                         Wilde, Oscar
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
                                     </td>
-                                    <td>
-                                        Member
-                                    </td>
                                     <td style="text-align:center;">
                                         <input src="../images/tinybutton-presentvoting.gif" onclick="javascript: alert('This would move this person to the Voting Members Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
                                         <input src="../images/tinybutton-presentother.gif" onclick="javascript: alert('This would move this person to the Others Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
@@ -735,9 +726,6 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                                     <td>
                                         Woolf, Virginia
                                         <input name="x" src="../images/book_open.png" onclick="javascript: alert('look-up here'); return false" class="tinybutton" alt="Direct Inquiry" type="image" />
-                                    </td>
-                                    <td>
-                                        Member
                                     </td>
                                     <td style="text-align:center;">
                                         <input src="../images/tinybutton-presentvoting.gif" onclick="javascript: alert('This would move this person to the Voting Members Present sub-panel.'); return false" class="tinybutton" alt="present" title="Mark Present" type="image" />
