[BFN] https://test.kuali.org/jira/browse/KRAFUNC-255 updates.
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6697 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-coi-bfn/coi-disclosureactions.html
+++ b/kra-coi-bfn/coi-disclosureactions.html
@@ -891,32 +891,34 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
         <table cellpadding=0 cellspacing="0" class="result-table" summary="">
             <tbody id="G5">
                 <tr>
-                    <th width="5%">&nbsp;</th>
-                    <th width="31%">Disclosure Category</th>
-                    <th width="27%">Date Submitted </th>
-                    <th width="24%">Description </th>
-                    <th width="13%">Actions</th>
+                    <th>&nbsp;</th>
+                    <th>Action Description</th>
+                    <th style="width:80px;">Date</th>
+                    <th>Action By</th>
+                </tr>
+                <tr>
+                    <th scope="row"><div align="center">1</div></th>
+                    <td>Submitted</td>
+                    <td>07/01/09</td>
+                    <td>Dr. John Smith</td>
+                </tr>
+                <tr>
+                    <th scope="row"><div align="center">2</div></th>
+                    <td>Reviewed</td>
+                    <td>07/10/09</td>
+                    <td>Department Chair</td>
                 </tr>
                 <tr>
                     <th scope="row"><div align="center">3</div></th>
-                    <td>General Questions</td>
-                    <td nowrap><div align="center"><span>12/14/06 </span></div></td>
-                    <td nowrap><div align="center">asdf</div></td>
-                    <td nowrap><div align="center"><img src="../images/tinybutton-view.gif" width="40" height="15"></div></td>
+                    <td>Reviewed by COI Committee</td>
+                    <td>08/01/09</td>
+                    <td>COI Committee</td>
                 </tr>
                 <tr>
-                    <th scope="row"><div align="center"><span class="copybold">2</span></div></th>
-                    <td>General Questions </td>
-                    <td nowrap><div align="center"><span> 11/14/06 </span></div></td>
-                    <td nowrap><div align="center"> asdf&nbsp; </div></td>
-                    <td nowrap><div align="center"><img src="../images/tinybutton-view.gif" width="40" height="15"></div></td>
-                </tr>
-                <tr>
-                    <th  scope="row"><div align="center">1</div></th>
-                    <td>General Questions </td>
-                    <td nowrap><div align="center"><span> 02/14/06 </span></div></td>
-                    <td nowrap><div align="center"> asdf </div></td>
-                    <td nowrap><div align="center"><img src="../images/tinybutton-view.gif" width="40" height="15"></div></td>
+                    <th scope="row"><div align="center">4</div></th>
+                    <td>Approved with Management Plan</td>
+                    <td>08/15/09</td>
+                    <td>Amber O'Banion</td>
                 </tr>
             </tbody>
         </table>
