https://test.kuali.org/jira/browse/KRAFUNC-254
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6698 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-pdb-dev/prop-propactions.html
+++ b/kra-pdb-dev/prop-propactions.html
@@ -477,7 +477,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table  cellpadding="0" cellspacing="0"  summary="">
               <tbody >
                 <tr>
-                  <td colspan="3" align=left valign=middle><div class="floaters">&nbsp;You are currently viewing <strong>Proposal #00000021</strong>, which is a Parent Document. The following actions are available:</div></td>
+                  <td colspan="3" align=left valign=middle><div class="floaters">You are currently viewing Proposal <strong>#00000021</strong>, which is a Parent Proposal. The following actions are available: </div></td>
                 </tr>
                 <tr>
                   <th>Link Child Proposal</th>
@@ -508,7 +508,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td align=left valign=middle><div align="center"><img src="../images/tinybutton-linkchildprop.gif" alt="dsdfhg" width="102" height="15" vspace="5"></div></td>
                 </tr>
                 <tr>
-                  <td colspan="3" class="infoline"><div align="center"><img src="../images/tinybutton-syncall.gif" alt="dsdfhg" width="51" height="15" vspace="5"></div></td>
+                  <td colspan="2" class="infoline">&nbsp;</td>
+                  <td class="infoline"><div align="center"><img src="../images/tinybutton-syncall.gif" alt="dsdfhg" width="51" height="15" vspace="5"></div></td>
                 </tr>
             </table>
             <br>
@@ -519,7 +520,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table  cellpadding="0" cellspacing="0"  summary="">
               <tbody >
                 <tr>
-                  <td colspan="3" align=left valign=middle><div class="floaters">&nbsp;You are currently viewing <strong>Proposal #00000021</strong>, which is currently  unlinked to a proposal hierarchy. </div></td>
+                  <td colspan="3" align=left valign=middle><div class="floaters">&nbsp;You are currently viewing Proposal <strong>#00000021</strong>, which is not linked to a proposal hierarchy. The following actions are available: </div></td>
                 </tr>
                 <tr>
                   <th>Link to Hierarchy</th>
@@ -549,7 +550,8 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   <td align=left valign=middle><div align="center"><img src="../images/tinybutton-linktohierarchy.gif" alt="dsdfhg" width="93" height="15" vspace="5"></div></td>
                 </tr>
                 <tr>
-                  <td colspan="3" class="infoline"><div align="center"><img src="../images/tinybutton-createhierarchy.gif" alt="dsdfhg" width="93" height="15" vspace="5"></div></td>
+                  <td colspan="2" class="infoline">&nbsp;</td>
+                  <td class="infoline"><div align="center"><img src="../images/tinybutton-createhierarchy.gif" alt="dsdfhg" width="93" height="15" vspace="5"></div></td>
                 </tr>
             </table>
             <br>
@@ -560,7 +562,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <table  cellpadding="0" cellspacing="0"  summary="">
               <tbody >
                 <tr>
-                  <td align=left valign=middle><div class="floaters">You are currently viewing <strong>Proposal #00000021</strong>, which is a Child Document. The parent Document is <strong>Proposal #00000019.</strong></div></td>
+                  <td align=left valign=middle><div class="floaters">You are currently viewing Proposal <strong>#00000021</strong>, which is a Child Proposal of Parent Proposal <strong>#00000019</strong>. The following actions are available: </div></td>
                 </tr>
                 <tr>
                   <td class="infoline"><div align="center"> <img src="../images/tinybutton-remhierarchy.gif" alt="dsdfhg" width="126" height="15" vspace="5"> <img src="../images/tinybutton-synctoparent.gif" alt="dsdfhg" width="85" height="15" vspace="5"></div></td>
