--- a/kra-awa-dev/aw-contacts.html
+++ b/kra-awa-dev/aw-contacts.html
@@ -124,9 +124,9 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
             <tbody id="G909">
               <tr>
                 <th scope="row">&nbsp;</th>
-                <th align="center" valign="top"><label for="object code">Person</label></th>
+                <th align="center" valign="top"><label for="object code">*Person</label></th>
                 <th align="center" valign="top">Unit</th>
-                <th align="center" valign="top">Project Role</th>
+                <th align="center" valign="top">*Project Role</th>
                 <th align="center" valign="top"><label for="cost sharing">Office Phone </label></th>
                 <th align="center" valign="top"><label for="qty">Email</label></th>
                 <th align="center" valign="top">Actions</th>
@@ -580,7 +580,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table cellpadding=0 cellspacing="0"  summary="">
             <tr>
               <th>&nbsp;</th>
-              <th>Person</th>
+              <th>*Person</th>
               <th> <div align="center">Unit</div></th>
               <th> <div align="center">
                   <label for ="label"> *Project Role</label>
@@ -736,7 +736,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table cellpadding=0 cellspacing="0"  summary="">
             <tr>
               <th>&nbsp;</th>
-              <th>Person or Organization</th>
+              <th>*Person or Organization</th>
               <th> <div align="center">
                   <label for ="label4">*Project Role</label>
                 </div></th>
@@ -952,7 +952,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
           <table cellpadding=0 cellspacing="0"  summary="">
             <tr>
               <th>&nbsp;</th>
-              <th>Person</th>
+              <th>*Person</th>
               <th> <div align="center">Unit</div></th>
               <th> <div align="center">
                   <label for ="label5">*Project Role</label>
