https://test.kuali.org/jira/browse/KRAFUNC-57
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/mocks/trunk@6700 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/kra-awa-dev/aw-awards.html
+++ b/kra-awa-dev/aw-awards.html
@@ -493,7 +493,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
               <table cellpAdding=0 cellspacing=0 summary="">
                 <tbody>
                   <tr>
-                    <th><div align=right>*Award ID:</div></th>
+                    <th><div align=right>Award ID:</div></th>
                     <td>000743-005</td>
                     <th><div align=right>
                         <label for="label4">Account Type: </label>
@@ -515,7 +515,7 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
                   </tr>
                   <tr>
                     <th><div align=right>
-                        <label for="label2">*Version:</label>
+                        <label for="label2">Version:</label>
                       </div></th>
                     <td>1</td>
                     <th><div align=right>
